Consistency edits, fix broken link

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -91,7 +91,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[documentation, testing + validation]{.b .black .smallercaps}](#documentation-testing-validation)
+![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[Documentation + Testing + Validation]{.b .black .smallercaps}](#documentation-testing-validation)
 :::
 
 :::
@@ -125,7 +125,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[risk insights + regulatory alignment]{.b .black .smallercaps}](#6-ai-risk-insights-regulatory-alignment)
+![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[risk insights + regulatory alignment]{.b .black .smallercaps}](#risk-insights-regulatory-alignment)
 :::
 
 :::
@@ -254,7 +254,7 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 :::
 
 
-# [2&ensp;Workflows & Approvals]{.hidden}{data-autoslide="18000"}
+# [2&ensp;Workflows + Approvals]{.hidden}{data-autoslide="18000"}
 
 [2]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Workflows & Approvals]{.f2 .b}
 
@@ -262,14 +262,15 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 
 :::: {.columns}
 
-::: {.column width="40%" .f3 .pr4 .pt2}
+::: {.column width="20%" .f3 .pr3}
+![](2-workflows-and-approvals.png){fig-alt="A screenshot of workflows and approvals"}
+
 <!-- **Regulatory expectations:**
 
 > _Ensure strong governance with oversight, clear policies, and assigned accountability._ -->
-
 :::
 
-::: {.column width="60%" .f2 .pl2 .pr2}
+::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
 ValidMind workflows enable governance by defining [roles and responsibilities]{.highlight .b}, enforcing [policies and procedures]{.highlight .b}, and [audit trails]{.highlight .b} across the lifecycle.
 
 :::
@@ -381,7 +382,7 @@ Use workflows to:
 :::
 
 
-# [3&ensp;Reporting & Analytics]{.hidden}{data-autoslide="12000"}
+# [3&ensp;Reporting + Analytics]{.hidden}{data-autoslide="12000"}
 
 [3]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Reporting & Analytics]{.f2 .b}
 
@@ -389,14 +390,15 @@ Use workflows to:
 
 :::: {.columns}
 
-::: {.column width="40%" .f3 .pr4 .pt2}
+::: {.column width="20%" .f3 .pr3}
+![](3-reporting-and-analytics.png){fig-alt="A screenshot of reporting and analytics"}
+
 <!-- **Governance expectations:**
 
 > _Provide comprehensive reporting to enable management oversight and demonstrate compliance with policies and regulations._ -->
-
 :::
 
-::: {.column width="60%" .f2 .pl2 .pr2}
+::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
 ValidMind provides [customizable dashboards]{.highlight .b} and [analytics]{.highlight .b} for oversight, plus [flexible exports]{.highlight .b} to meet reporting requirements.
 
 :::
@@ -451,7 +453,7 @@ Track artifacts, approvals, and sign-offs across the lifecycle
 :::
 
 
-# [4&ensp;Documentation, Testing & Validation]{.hidden}{data-autoslide="18000"}
+# [4&ensp;Documentation + Testing + Validation]{.hidden}{data-autoslide="18000"}
 
 [4]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Documentation, Testing & Validation]{.f2 .b}
 
@@ -459,14 +461,15 @@ Track artifacts, approvals, and sign-offs across the lifecycle
 
 :::: {.columns}
 
-::: {.column width="40%" .f3 .pr4 .pt2}
+::: {.column width="20%" .f3 .pr3}
+![](4-documentation-testing-and-validation.png){fig-alt="A screenshot of documentation, testing and validation"}
+
 <!-- **Governance expectations:**
 
 > _Implement robust development processes with standards for design, testing, documentation, and independent review._ -->
-
 :::
 
-::: {.column width="60%" .f2 .pl2 .pr2}
+::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
 ValidMind sets a standard by [automating documentation]{.highlight .b}, providing [comprehensive testing]{.highlight .b}, and enabling [independent validation]{.highlight .b} with full audit trails.
 
 :::
@@ -678,14 +681,15 @@ Validators can use the same library as model developers:
 
 :::: {.columns}
 
-::: {.column width="40%" .f3 .pr4 .pt2}
+::: {.column width="20%" .f3 .pr3}
+![](5-ongoing-monitoring.png){fig-alt="A screenshot of ongoing monitoring"}
+
 <!-- **Governance expectations:**
 
 > _Continuously monitor items to ensure they remain accurate, reliable, and appropriate for their intended use._ -->
 :::
 
-::: {.column width="60%" .f2 .pl2 .pr2}
-
+::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
 ValidMind provides [ongoing monitoring]{.highlight .b} to ensure items perform as expected and to detect potential issues early.
 
 Combine monitoring and workflows for [performance-based governance]{.highlight .b} with [thresholds and alerts]{.highlight .b} to trigger action.
@@ -762,7 +766,7 @@ Combine monitoring & workflows for:
 :::
 
 
-# [6&ensp;Risk Insights & Regulatory Alignment]{.hidden}{data-autoslide="12000"}
+# [6&ensp;Risk Insights + Regulatory Alignment]{.hidden}{data-autoslide="12000"}
 
 [6]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Risk Insights & Regulatory Alignment]{.f2 .b}
 
@@ -770,14 +774,15 @@ Combine monitoring & workflows for:
 
 :::: {.columns}
 
-::: {.column width="40%" .f3 .pr4 .pt2}
+::: {.column width="20%" .f3 .pr3}
+![](6-risk-insights-and-regulatory-alignment.png){fig-alt="A screenshot of risk insights and regulatory alignment"}
+
 <!-- **Governance expectations:**
 
 > _Leverage AI capabilities to enhance risk assessment, ensure regulatory compliance, and maintain alignment with evolving frameworks._ -->
-
 :::
 
-::: {.column width="60%" .f2 .pl2 .pr2}
+::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
 ValidMind provides [AI-powered risk insights]{.highlight .b} to enhance documentation quality, plus built-in support for [regulatory frameworks]{.highlight .b} and compliance requirements.
 
 :::
