Add tilt effect, edits

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -11,7 +11,7 @@ format:
     controls-tutorial: true
     help: true
     controls-back-arrows: visible
-    transition: slide
+    transition: zoom
     theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
@@ -156,13 +156,9 @@ skip_preview: true
 
 # [1&ensp;The Inventory]{.hidden}{data-autoslide="12000"}
 
-[1]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[The Inventory]{.f2 .b}
-
-<hr>
-
 :::: {.columns}
 
-::: {.column width="20%" .f3 .pr3}
+::: {.column width="20%" .f3 .pr3 .tc}
 ![](1-the-inventory.png){fig-alt="A screenshot of the inventory"}
 
 <!-- **Governance expectations:**
@@ -170,7 +166,15 @@ skip_preview: true
 > _Maintain a comprehensive registry of AI systems, models, and tools with clear ownership, classification, and dependencies._ -->
 :::
 
-::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
+::: {.column width="10%" .f2 .pt2 .tr}
+[1]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+:::
+
+::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
+[The Inventory]{.f1 .b}
+
+<!-- <hr> -->
+
 ValidMind offers a platform to [register items]{.b}, maintain [a customizable inventory]{.b}, and implement [risk-based classification]{.b} to support effective governance.
 :::
 
@@ -181,18 +185,21 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 
 :::: {.columns}
 
-::: {.column width="75%" .pr4 .mt4}
-![](../assets/vm-model-inventory.gif){fig-alt="An animation of the inventory to filter for items and change the layout" .screenshot}
+::: {.column width="60%" .pr3 .nt5}
+::: {.tilt-wrap}
+![](../assets/vm-model-inventory.gif){fig-alt="An animation of the inventory to filter for items and change the layout" .screenshot .tilt-right}
+:::
 :::
 
-::: {.column width="25%" .f3 .pl4 .pv4 .nt4}
-[Inventory]{.button-small .f4}
+::: {.column width="40%" .f3 .pl3}
+[the inventory]{.button-small .f4}
 
-- Industry-aligned
+- Industry-aligned inventory
 - Customizable & extensible 
-- Integrated with workflows<br>[Example: Risk assessment]{.smallcaps .f6}
+- Integrated with workflows
+<!-- <br>[Example: Risk assessment]{.smallcaps .f6} -->
 - Link interdependent items
-- Filter, sort, and search
+<!-- - Filter, sort, and search -->
 :::
 
 ::::
@@ -218,15 +225,15 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 
 :::: {.columns}
 
-::: {.column width="60%" .pl2 .pr2}
-![](../assets/vm-model-registration-ss1-23.gif){width="80%" fig-alt="An animation of the registration process as you step through a series of classification drop-down menus" .screenshot}
+::: {.column width="60%" .pl5 .pr3 .nt3}
+![](../assets/vm-model-registration-ss1-23.gif){width="80%" fig-alt="An animation of the registration process as you step through a series of classification drop-down menus" .screenshot .tilt-right}
 :::
 
-::: {.column width="40%" .f3 .pl4}
+::: {.column width="40%" .f3 .pl3}
 [Registration]{.button-small .f4}
 
 - Register items and track them across their lifecycle
-- Apply predefined templates
+<!-- - Apply predefined templates -->
 - Indicate business unit and use case
 - Assign a preliminary risk tier
 - Identify third-party vendors
@@ -256,13 +263,9 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 
 # [2&ensp;Workflows + Approvals]{.hidden}{data-autoslide="18000"}
 
-[2]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Workflows & Approvals]{.f2 .b}
-
-<hr>
-
 :::: {.columns}
 
-::: {.column width="20%" .f3 .pr3}
+::: {.column width="20%" .f3 .pr3 .tc}
 ![](2-workflows-and-approvals.png){fig-alt="A screenshot of workflows and approvals"}
 
 <!-- **Regulatory expectations:**
@@ -270,8 +273,16 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 > _Ensure strong governance with oversight, clear policies, and assigned accountability._ -->
 :::
 
-::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
-ValidMind workflows enable governance by defining [roles and responsibilities]{.highlight .b}, enforcing [policies and procedures]{.highlight .b}, and [audit trails]{.highlight .b} across the lifecycle.
+::: {.column width="10%" .f2 .pt2 .tr}
+[2]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+:::
+
+::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
+[Workflows & Approvals]{.f1 .b}
+
+<!-- <hr> -->
+
+ValidMind workflows enable governance by defining [roles and responsibilities]{.b}, enforcing [policies and procedures]{.b}, and [audit trails]{.b} across the lifecycle.
 
 :::
 
@@ -384,13 +395,9 @@ Use workflows to:
 
 # [3&ensp;Reporting + Analytics]{.hidden}{data-autoslide="12000"}
 
-[3]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Reporting & Analytics]{.f2 .b}
-
-<hr>
-
 :::: {.columns}
 
-::: {.column width="20%" .f3 .pr3}
+::: {.column width="20%" .f3 .pr3 .tc}
 ![](3-reporting-and-analytics.png){fig-alt="A screenshot of reporting and analytics"}
 
 <!-- **Governance expectations:**
@@ -398,8 +405,16 @@ Use workflows to:
 > _Provide comprehensive reporting to enable management oversight and demonstrate compliance with policies and regulations._ -->
 :::
 
-::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
-ValidMind provides [customizable dashboards]{.highlight .b} and [analytics]{.highlight .b} for oversight, plus [flexible exports]{.highlight .b} to meet reporting requirements.
+::: {.column width="10%" .f2 .pt2 .tr}
+[3]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+:::
+
+::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
+[Reporting & Analytics]{.f2 .b}
+
+<!-- <hr> -->
+
+ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversight, plus [flexible exports]{.b} to meet reporting requirements.
 
 :::
 
@@ -455,13 +470,9 @@ Track artifacts, approvals, and sign-offs across the lifecycle
 
 # [4&ensp;Documentation + Testing + Validation]{.hidden}{data-autoslide="18000"}
 
-[4]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Documentation, Testing & Validation]{.f2 .b}
-
-<hr>
-
 :::: {.columns}
 
-::: {.column width="20%" .f3 .pr3}
+::: {.column width="20%" .f3 .pr3 .tc}
 ![](4-documentation-testing-and-validation.png){fig-alt="A screenshot of documentation, testing and validation"}
 
 <!-- **Governance expectations:**
@@ -469,8 +480,16 @@ Track artifacts, approvals, and sign-offs across the lifecycle
 > _Implement robust development processes with standards for design, testing, documentation, and independent review._ -->
 :::
 
-::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
-ValidMind sets a standard by [automating documentation]{.highlight .b}, providing [comprehensive testing]{.highlight .b}, and enabling [independent validation]{.highlight .b} with full audit trails.
+::: {.column width="10%" .f2 .pt2 .tr}
+[4]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+:::
+
+::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
+[Documentation, Testing & Validation]{.f2 .b}
+
+<!-- <hr> -->
+
+ValidMind sets a standard by [automating documentation]{.b}, providing [comprehensive testing]{.b}, and enabling [independent validation]{.b} with full audit trails.
 
 :::
 
@@ -675,13 +694,9 @@ Validators can use the same library as model developers:
 
 # [5&ensp;Ongoing Monitoring]{.hidden}{data-autoslide="6000"}
 
-[5]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Ongoing Monitoring]{.f2 .b}
-
-<hr>
-
 :::: {.columns}
 
-::: {.column width="20%" .f3 .pr3}
+::: {.column width="20%" .f3 .pr3 .tc}
 ![](5-ongoing-monitoring.png){fig-alt="A screenshot of ongoing monitoring"}
 
 <!-- **Governance expectations:**
@@ -689,10 +704,18 @@ Validators can use the same library as model developers:
 > _Continuously monitor items to ensure they remain accurate, reliable, and appropriate for their intended use._ -->
 :::
 
-::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
-ValidMind provides [ongoing monitoring]{.highlight .b} to ensure items perform as expected and to detect potential issues early.
+::: {.column width="10%" .f2 .pt2 .tr}
+[5]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+:::
 
-Combine monitoring and workflows for [performance-based governance]{.highlight .b} with [thresholds and alerts]{.highlight .b} to trigger action.
+::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
+[Ongoing Monitoring]{.f2 .b}
+
+<!-- <hr> -->
+
+ValidMind provides [ongoing monitoring]{.b} to ensure items perform as expected and to detect potential issues early.
+
+Combine monitoring and workflows for [performance-based governance]{.b} with [thresholds and alerts]{.b} to trigger action.
 :::
 
 ::::
@@ -768,13 +791,9 @@ Combine monitoring & workflows for:
 
 # [6&ensp;Risk Insights + Regulatory Alignment]{.hidden}{data-autoslide="12000"}
 
-[6]{.f2 .ph3 .br2 .white .bg-dark-pink .smallcaps}&ensp;[Risk Insights & Regulatory Alignment]{.f2 .b}
-
-<hr>
-
 :::: {.columns}
 
-::: {.column width="20%" .f3 .pr3}
+::: {.column width="20%" .f3 .pr3 .tc}
 ![](6-risk-insights-and-regulatory-alignment.png){fig-alt="A screenshot of risk insights and regulatory alignment"}
 
 <!-- **Governance expectations:**
@@ -782,8 +801,16 @@ Combine monitoring & workflows for:
 > _Leverage AI capabilities to enhance risk assessment, ensure regulatory compliance, and maintain alignment with evolving frameworks._ -->
 :::
 
-::: {.column width="80%" .f2 .pl3 .pr3 .pt2}
-ValidMind provides [AI-powered risk insights]{.highlight .b} to enhance documentation quality, plus built-in support for [regulatory frameworks]{.highlight .b} and compliance requirements.
+::: {.column width="10%" .f2 .pt2 .tr}
+[6]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+:::
+
+::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
+[Risk Insights + Regulatory Alignment]{.f1 .b}
+
+<!-- <hr> -->
+
+ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quality, plus built-in support for [regulatory frameworks]{.b} and compliance requirements.
 
 :::
 
@@ -904,7 +931,7 @@ ValidMind provides predefined templates and workflows aligned with major regulat
 :::
 
 ::: {.f4 .pl3 .pt2}
-[SR 11-7]{.button-small .shadow-5-ns} [SS1/23]{.button-small .shadow-5-ns} [E-23]{.button-small .shadow-5-ns} [EU AI Act]{.button-small .shadow-5-ns}
+[SR 11-7]{.button-small .shadow-5-ns} [SS1/23]{.button-small .shadow-5-ns} [E-23]{.button-small .shadow-5-ns} [EU AI ACT]{.button-small .shadow-5-ns}
 :::
 :::
 
@@ -951,27 +978,27 @@ ValidMind provides predefined templates and workflows aligned with major regulat
 
 ::: {.column width="50%" .pr4}
 
-[By Role]{.button-small .f4 .mb3}
+[by role]{.button-small .f4 .mb3}
 
-[[Administrator Fundamentals](https://docs.validmind.com/training/administrator-fundamentals/administrator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+[[administrator fundamentals](https://docs.validmind.com/training/administrator-fundamentals/administrator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
 
-[[Developer Fundamentals](https://docs.validmind.com/training/developer-fundamentals/developer-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+[[developer fundamentals](https://docs.validmind.com/training/developer-fundamentals/developer-fundamentals-register.html)]{.button .shadow-5-ns .f4}
 
-[[Validator Fundamentals](https://docs.validmind.com/training/validator-fundamentals/validator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+[[validator fundamentals](https://docs.validmind.com/training/validator-fundamentals/validator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
 
 :::
  
 ::: {.column width="50%" .pl3}
 
-[By Use Case]{.button-small .f4 .mb3}
+[by use case]{.button-small .f4 .mb3}
 
-[[AI Governance Training](https://docs.validmind.com/training/ai-governance/ai-governance-register.html)]{.button .shadow-5-ns .f4}
+[[quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}
 
-[[Code Samples & JupyterHub](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
+[[training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}
 
-[[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}
+[[user guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}
 
-[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}
+[[code samples & jupyterhub](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
 
 :::
 
