Adjusting the variables

--- a/site/guide/configuration/configure-google-private-service-connect.qmd
+++ b/site/guide/configuration/configure-google-private-service-connect.qmd
@@ -29,7 +29,7 @@ These steps assume that you already have established connectivity between your o
 
 | Name | Provider |  Region       | Service name                                            | Private DNS name             |
 | -- | -- | --------------- | ------------------------------------------------------- | ---------------------------- |
-| US3 | GCP | `us-west1`    | Email <{{< var vm.support >}}> | Email <{{< var vm.support >}}> |
+| US3 | GCP | `us-west1`    | Email <{{< var support.email >}}> | Email <{{< var support.email >}}> |
 
 :::
 
@@ -57,7 +57,7 @@ After these steps, both the Cloud DNS and the Google Compute Engine API should b
 
 ## Request access from {{< var vm.product >}}
 
-Contact {{< var vm.product >}} at [{{< var vm.support >}}](mailto:{{< var vm.support >}}?subject=VPC%20Endpoint%20Connection%20Request) to get your new VPC endpoint connection request accepted. Include the following information:
+Contact {{< var vm.product >}} at [{{< var support.email >}}](mailto:{{< var support.email >}}?subject=VPC%20Endpoint%20Connection%20Request) to get your new VPC endpoint connection request accepted. Include the following information:
 
    - The project name
    - The project ID
