--- a/site/support/support.qmd
+++ b/site/support/support.qmd
@@ -24,7 +24,7 @@ listing:
     contents:
       - path: https://support.validmind.com
         title: "{{< fa cricle-question >}} {{< var vm.product >}} Help Center"
-        subtitle: "https://{{< var validmind.support >}} {{< fa angle-right >}}"
+        subtitle: "https://{{< var support.center >}} {{< fa angle-right >}}"
         description: "Sign in with your {{< var vm.product >}} account and then click on **Submit a request**."
     fields: [title, subtitle, description]
 ---
@@ -58,7 +58,7 @@ We recommend you use the Help Center because it allows you to keep track of and 
 
 ::: {.pt3}
 ##### {{< fa handshake-simple solid size=xl >}}&ensp;Help Center (recommended)
-Go to [{{< var validmind.support >}}](https://{{< var validmind.support >}}) and submit a request. 
+Go to [{{< var support.center >}}](https://{{< var support.center >}}) and submit a request. 
 
 If you have a {{< var vm.product >}} account, sign in with your login email to help us identify you.
 
@@ -86,7 +86,7 @@ If you have a {{< var vm.product >}} account, provide your login email to help u
 
 ::: {.pt3}
 ##### {{< fa envelope solid size=xl >}}&ensp;Email 
-Send an email to <{{< var vm.support >}}>.
+Send an email to <{{< var support.email >}}>.
 
 If you have a {{< var vm.product >}} account, send a message from your login email to help us identify you.
 
