--- a/site/guide/configuration/configure-aws-privatelink.qmd
+++ b/site/guide/configuration/configure-aws-privatelink.qmd
@@ -46,7 +46,7 @@ Recording: 46:00 FR InfoSec log in and set up endpoint > request pending, need t
 
 | Region       | Service name                                            | Private DNS name             |
  ------------- | ------------------------------------------------------- | ---------------------------- |
-| `us-west-2`    | Email <{{< var support.email >}}> | Email <{{< var support.email >}}> | 
+| `us-west-2`    | Email [{{< var support.email >}}](mailto:{{< var support.email >}}) | Email [{{< var support.email >}}](mailto:{{< var support.email >}}) | 
 
 <!--- | us-west-2    | com.amazonaws.vpce.us-west-2.vpce-svc-0b956fa3e03afa538 | [{{< var aws.privatelink >}}]({{< var aws.privatelink >}}) | --->
 <!--- | us-east-1    | com.amazonaws.vpce.us-west-2.vpce-svc-0b956fa3e03afa538 | private.prod.vm.validmind.ai | --->
