--- a/site/guide/configuration/configure-azure-private-link.qmd
+++ b/site/guide/configuration/configure-azure-private-link.qmd
@@ -33,7 +33,7 @@ These steps assume that you already have established connectivity between your o
 
 | Region       | Service name                         | Private DNS name             |
 | ------------ | ------------------------------------ | ---------------------------- |
-| `us-west-2`  | Email <{{< var support.email >}}>        | Email <{{< var support.email >}}> |
+| `us-west-2`  | Email [{{< var support.email >}}](mailto:{{< var support.email >}})        | Email [{{< var support.email >}}](mailto:{{< var support.email >}}) |
 
 :::
 
