--- a/site/guide/configuration/configure-google-private-service-connect.qmd
+++ b/site/guide/configuration/configure-google-private-service-connect.qmd
@@ -29,7 +29,7 @@ These steps assume that you already have established connectivity between your o
 
 | Name | Provider |  Region       | Service name                                            | Private DNS name             |
 | -- | -- | --------------- | ------------------------------------------------------- | ---------------------------- |
-| US3 | GCP | `us-west1`    | Email <{{< var support.email >}}> | Email <{{< var support.email >}}> |
+| US3 | GCP | `us-west1`    | Email [{{< var support.email >}}](mailto:{{< var support.email >}}) | Email [{{< var support.email >}}](mailto:{{< var support.email >}}) |
 
 :::
 
