Edits, change .bg-dark-green to dark teal

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -35,11 +35,11 @@ skip_preview: true
 
 :::: {.columns}
 
-::: {.column width="50%" .tc .nt5}
+::: {.column width="50%" .tl .nt5 .pl5}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[1]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+[1]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
 :::
 
 ::: {.nt6}
@@ -49,11 +49,11 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tc .nt5}
+::: {.column width="50%" .tl .nt5}
 
 :::{.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[2]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+[2]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
 :::
 
 ::: {.nt6}
@@ -69,11 +69,11 @@ skip_preview: true
 
 :::: {.columns}
 
-::: {.column width="50%" .tc}
+::: {.column width="50%" .tl .pl5}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[3]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+[3]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
 :::
 
 ::: {.nt6}
@@ -83,11 +83,11 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tc}
+::: {.column width="50%" .tl}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt2}
-[4]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+[4]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
 :::
 
 ::: {.nt6}
@@ -103,11 +103,11 @@ skip_preview: true
 
 :::: {.columns}
 
-::: {.column width="50%" .tc}
+::: {.column width="50%" .tl .pl5}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[5]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+[5]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
 :::
 
 ::: {.nt6}
@@ -117,11 +117,11 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tc}
+::: {.column width="50%" .tl}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[6]{.ph3 .br2 .white .bg-dark-pink .smallcaps .f3}
+[6]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
 :::
 
 ::: {.nt6}
@@ -167,7 +167,7 @@ skip_preview: true
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[1]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+[1]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -175,7 +175,7 @@ skip_preview: true
 
 <!-- <hr> -->
 
-ValidMind offers a platform to [register items]{.b}, maintain [a customizable inventory]{.b}, and implement [risk-based classification]{.b} to support effective governance.
+ValidMind is your [system of record]{.b} for governance. Use the inventory to [track AI systems, models, use cases, and tools]{.b}, along with their dependencies.
 :::
 
 ::::
@@ -185,26 +185,29 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 
 :::: {.columns}
 
-::: {.column width="60%" .pr3 .nt5}
+::: {.column width="60%" .pr3 .nt5 .tr}
 ::: {.tilt-wrap}
 ![](../assets/vm-model-inventory.gif){fig-alt="An animation of the inventory to filter for items and change the layout" .screenshot .tilt-right}
 :::
 :::
 
 ::: {.column width="40%" .f3 .pl3}
-[the inventory]{.button-small .f4}
+The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own fields, [integrated with workflows]{.b}, and [scales to your needs]{.b}.
+<!-- [The Inventory]{.f2 .b}
 
-- Industry-aligned inventory
-- Customizable & extensible 
+- Industry-aligned
+- Customizable
 - Integrated with workflows
-<!-- <br>[Example: Risk assessment]{.smallcaps .f6} -->
+<br>[Example: Risk assessment]{.smallcaps .f6}
 - Link interdependent items
-<!-- - Filter, sort, and search -->
+- Filter, sort, and search
+- Scales to your needs -->
+
 :::
 
 ::::
 
-::: {.slideover--b}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -225,26 +228,33 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 
 :::: {.columns}
 
-::: {.column width="60%" .pl5 .pr3 .nt3}
+::: {.column width="60%" .pr3 .nt5 .tc}
 ![](../assets/vm-model-registration-ss1-23.gif){width="80%" fig-alt="An animation of the registration process as you step through a series of classification drop-down menus" .screenshot .tilt-right}
 :::
 
 ::: {.column width="40%" .f3 .pl3}
-[Registration]{.button-small .f4}
+[Registration]{.b} starts the lifecycle for governance items. 
 
-- Register items and track them across their lifecycle
-<!-- - Apply predefined templates -->
+<!-- You provide [basic information]{.b}, a [preliminary risk tier]{.b}, who the [stakeholders]{.b} are, and information whether the item is an [AI application]{.b}. -->
+Provide basic information, identify the stakeholders, and collect any other required information. 
+
+For example, you can require users to [identify AI applications]{.b} so that they can be governed appropriately.
+
+
+<!-- Specify the [business unit and use case]{.b}, identify [third party vendors]{.b}, and assign [preliminary risk tiers]{.b}. -->
+<!-- [Registration]{.f2 .b}
+
+- Start tracking governance items
 - Indicate business unit and use case
-- Assign a preliminary risk tier
 - Identify third-party vendors
-- Define dependencies
+- Assign preliminary risk tiers -->
 
-![Preliminary risk assessment](../assets/vm-preliminary-risk-tier.png){width="60%" fig-alt="A screenshot of risk assessment" .screenshot}
+<!-- ![[Risk tier]{.f5}](../assets/vm-preliminary-risk-tier.png){width="50%" fig-alt="A screenshot of risk assessment" .screenshot} -->
 :::
 
 ::::
 
-::: {.slideover--b .three-quarters}
+::: {.slideover--b .three-quarters .auto-collapse}
 
 :::: columns
 
@@ -274,7 +284,7 @@ ValidMind offers a platform to [register items]{.b}, maintain [a customizable in
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[2]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+[2]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -293,33 +303,37 @@ ValidMind workflows enable governance by defining [roles and responsibilities]{.
 
 :::: {.columns}
 
-::: {.column width="75%"}
-![](../assets/vm-risk-classification-workflow.gif){fig-alt="A screenshot of workflow detail showing how model registration includes a risk classification step" .screenshot}
+::: {.column width="60%" .tc .nt6}
+![](../assets/vm-risk-classification-workflow.gif){width="80%" fig-alt="A screenshot of workflow detail showing how model registration includes a risk classification step" .screenshot .tilt-right}
 :::
 
-::: {.column width="25%" .f4}
-[Roles and Responsibilities]{.button-small .f5} 
+::: {.column width="40%" .f3 .pl3 .nt4}
+[Roles and responsibilities]{.b} define clear actions for your stakeholders to follow.
 
-::: {.pl4 .mb4}
-Clearly define roles for: 
+<!-- [Roles and Responsibilities]{.f3 .b} 
+
+::: {.pl3 .mb4}
+Define actions for: 
 
 - Owners
 - Developers
 - Validators
-- Governance committee
-:::
+- Governance committees and other stakeholders
+::: -->
 
-[Audit Trails]{.button-small .f5} 
+[Audit trails]{.b} track all activities across lifecycle stages, statuses, artifacts, and validation issues.
+
+<!-- [Audit Trails]{.f3 .b} 
 
 ::: {.pl4}
 Track all activities for:
 
-- Workflow stages
+- Lifecycle stages
 - Statuses
 - Artifacts
 - Remediation plans
 - And much more
-:::
+::: -->
 
 :::
 
@@ -346,37 +360,36 @@ Track all activities for:
 :::
 
 
-# [Policies and Procedures]{.hidden}{data-autoslide="18000"}
+# [What do I use workflows for?]{.hidden}{data-autoslide="18000"}
 
 :::: {.columns}
 
-::: {.column width="25%" .pl5}
-![](../assets/vm-settings-workflows.png){fig-alt="A screenshot of ready-made workflows" .screenshot}
+::: {.column width="70%" .nt3 .f3 .pl4}
+
+[Workflows let you:]{.f2 .b}
+
+::: {.pl2}
+- [Implement]{.b} governance frameworks
+
+- [Automate]{.b} risk processes with triggers and schedules
+
+- [Standardize]{.b} model documentation and independent review
+
+- [Get alerts]{.b} for items that need attention
+
+- [Comply]{.b} with external regulations and internal policies
+
 :::
 
-::: {.column width="45%" .nt5 .pl4}
-![](../assets/vm-model-validation-start.png){width="80%" fig-alt="A screenshot of ready-made workflows" .screenshot}
-:::
-
-::: {.column width="30%" .nt5 .f4}
-[Policies and Procedures]{.button-small .f5}
-
-Use workflows to: 
-
-::: {.pl4 .mb4}
-- Implement governance frameworks
-- Automate risk processes with triggers and schedules
-- Standardize model documentation and independent review
-- Get alerts for items that need attention
-- Comply with external regulations and internal policies
-
+::: {.column width="30%" .pl4 .pr3 .nt5}
+![](../assets/vm-settings-workflows.png){fig-alt="A screenshot of ready-made workflows" .screenshot .tilt-left}
 :::
 
 :::
 
 ::::
 
-::: {.slideover--b .three-quarters}
+::: {.slideover--b .three-quarters .auto-collapse}
 
 :::: columns
 
@@ -406,7 +419,7 @@ Use workflows to:
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[3]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+[3]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -451,7 +464,7 @@ Track artifacts, approvals, and sign-offs across the lifecycle
 
 ::::
 
-::: {.slideover--b .three-quarters}
+::: {.slideover--b .three-quarters .auto-collapse}
 
 :::: columns
 
@@ -481,7 +494,7 @@ Track artifacts, approvals, and sign-offs across the lifecycle
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[4]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+[4]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -520,7 +533,7 @@ ValidMind sets a standard by [automating documentation]{.b}, providing [comprehe
 
 ::::
 
-::: {.slideover--b}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -595,7 +608,7 @@ results = vm.run_development_tests()
 
 :::: 
 
-::: {.slideover--b}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -634,7 +647,7 @@ results = vm.run_development_tests()
 
 ::::
 
-::: {.slideover--b .three-quarters}
+::: {.slideover--b .three-quarters .auto-collapse}
 
 :::: columns
 
@@ -671,7 +684,7 @@ results = vm.run_development_tests()
 
 ::::
 
-::: {.slideover--b}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -705,7 +718,7 @@ Validators can use the same library as model developers:
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[5]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+[5]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -772,7 +785,7 @@ Combine monitoring & workflows for:
 
 ::::
 
-::: {.slideover--b .three-quarters}
+::: {.slideover--b .three-quarters .auto-collapse}
 
 :::: columns
 
@@ -802,7 +815,7 @@ Combine monitoring & workflows for:
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[6]{.f1 .ph3 .br2 .white .bg-dark-pink .smallcaps}
+[6]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -900,7 +913,7 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 
 ::::
 
-::: {.slideover--b .three-quarters}
+::: {.slideover--b .three-quarters .auto-collapse}
 
 :::: columns
 
@@ -954,7 +967,7 @@ ValidMind provides predefined templates and workflows aligned with major regulat
 
 ::::
 
-::: {.slideover--b .three-quarters}
+::: {.slideover--b .three-quarters .auto-collapse}
 
 :::: columns
 
@@ -978,27 +991,27 @@ ValidMind provides predefined templates and workflows aligned with major regulat
 
 ::: {.column width="50%" .pr4}
 
-[by role]{.button-small .f4 .mb3}
+[Training by role]{.button-small .f4 .mb3}
 
-[[administrator fundamentals](https://docs.validmind.com/training/administrator-fundamentals/administrator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+[[Administrator Fundamentals](https://docs.validmind.com/training/administrator-fundamentals/administrator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
 
-[[developer fundamentals](https://docs.validmind.com/training/developer-fundamentals/developer-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+[[Developer Fundamentals](https://docs.validmind.com/training/developer-fundamentals/developer-fundamentals-register.html)]{.button .shadow-5-ns .f4}
 
-[[validator fundamentals](https://docs.validmind.com/training/validator-fundamentals/validator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
+[[Validator Fundamentals](https://docs.validmind.com/training/validator-fundamentals/validator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
 
 :::
  
 ::: {.column width="50%" .pl3}
 
-[by use case]{.button-small .f4 .mb3}
+[Training by use case]{.button-small .f4 .mb3}
 
-[[quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}
+[[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}
 
-[[training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}
+[[Training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}
 
-[[user guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}
+[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}
 
-[[code samples & jupyterhub](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
+[[Code Samples](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
 
 :::
 
